--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -61,17 +61,22 @@ h5 {
 }
 
 .search-input-group {
-    @apply relative flex-grow cursor-pointer hover:ring-pink-red hover:ring-2 rounded-lg;
+    @apply relative flex-grow cursor-pointer hover:ring-pink-red hover:ring-2 rounded-lg bg-gray-primary;
+}  
+
+.search-input-group:focus-within {
+    @apply ring-pink-red ring-2;
 }
+ 
     .search-input-group > div {
-        @apply absolute top-2 left-6;
+        @apply z-0 absolute top-2 left-6;
     }    
         .search-input-group > div > div:last-of-type {
             @apply text-gray-tertiary text-base;
         }
     
     .search-input-group input {
-        @apply cursor-pointer bg-gray-primary rounded-lg text-lg placeholder:text-black-primary py-5 border-gray-secondary border w-full focus:outline-none focus:ring-0 focus:border-0 caret-transparent;
+        @apply relative bg-transparent z-10 cursor-pointer rounded-lg text-lg placeholder:text-black-primary py-5 border-gray-secondary border w-full focus:outline-none focus:ring-0 focus:border-transparent caret-transparent;
     }
 
 .divide-custom {
